changed styles for alignment of personal details

--- a/projection.html
+++ b/projection.html
@@ -25,7 +25,7 @@
     <div class="content-holder">
       <div id="personal">
         <h4 class="underline">PERSONAL DETAILS</h4>
-        <p>Date of birth: 18/8/1998</p>
+        <p class="personal">Date of birth: 18/8/1998 </p>
         <p>P.O.BOX: 75104-00200</p>
         <p>Nationality: Kenyan</p>
         <p>Marital Status: Trying to get married</p>
