--- a/projection.html
+++ b/projection.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css\styles.css" type="text/css">
     <title>Daniel Ogechi</title>
   </head>
@@ -16,35 +17,65 @@
       problems and create mobile applications that are user tailored to
       give the best experience and exceptional services.</p>
 
-    <div class="career">
+    <div class="details">
       <h4>CAREER OBJECTIVES</h4>
       <p>To develop a career that fully utilizes my unique gifts of patience, passion, creativity and imagination; where I can work in application of my gained knowledge
         and in peace and harmony within a transparent fraternity.</p>
       </div>
 
     <div class="content-holder">
+
       <div id="personal">
         <h4 class="underline">PERSONAL DETAILS</h4>
-        <p class="personal">Date of birth: 18/8/1998 </p>
-        <p>P.O.BOX: 75104-00200</p>
-        <p>Nationality: Kenyan</p>
-        <p>Marital Status: Trying to get married</p>
+        <p><div class="personal">
+          <div id="personal-sep">
+            <p>Date of birth:</p>
+            <p>Nationality:</p>
+            <p>P.O.BOX:</p>
+            <p>Marital Status:</p>
+          </div>
+          <div id="personal_sep">
+            <p>18/8/1998</p>
+            <p>Kenyan</p>
+            <p>75104-00200</p>
+            <p> Single</p>
+          </div>
+        </div></p>
 
         <h4 class="underline">EDUCATION</h4>
 
-        <h5><strong>Lenana School</strong> </h5>
-        <p>Nairobi,Kenya - 11/2015</p>
-        <p>Relevant Coursework:Mathematics; English; Biology; Physics; Chemistry; Business Studies.</p>
+        <p><div class="personal">
+          <div id="personal-sep">
+            <h5><strong>Lenana School</strong> </h5>
+          </div>
+          <div id="personal_sep">
+            <p>Nairobi,Kenya: 11/2015</p>
+          </div>
+        </div></p>
+        <p><strong>Relevant Coursework:</strong>Mathematics; English; Biology; Physics; Chemistry; Business Studies.</p>
         <p>Overall Grade A- 76/84 points</p>
 
-        <h5><strong>African Leadership University</strong> </h5>
-        <p>Kigali,Rwanda - 09/2018 - 2022</p>
-        <p>BSc.Computer Science:</p>
+        <p><div class="personal">
+          <div id="personal-sep">
+            <h5><strong>African Leadership University</strong> </h5>
+          </div>
+          <div id="personal_sep">
+            <p>Kigali,Rwanda: 09/2018 - 2022</p>
+          </div>
+        </div></p>
+
+        <p><strong>BSc.Computer Science:</strong> </p>
         <p>Programming ; Discrete Mathematics; Database Systems; Mathematical Computing.</p>
         <p>Tools: SQL, HTML, JavaScript, C, C++</p>
 
-        <h5><strong>Moringa School</strong> </h5>
-        <p>Nairobi,Kenya - 10/2019 - 04/2020</p>
+        <p><div class="personal">
+          <div id="personal-sep">
+            <h5><strong>Moringa School</strong> </h5>
+          </div>
+          <div id="personal_sep">
+            <p>Nairobi,Kenya: 10/2019 - 04/2020</p>
+          </div>
+        </div></p>
         <p><strong>Data Science:</strong> </p>
         <p><li>Key Coursework: Business understanding, Data Understanding, Data Preparation, Data Analysis, Data Visualization and Machine Learning</li></p>
         <p><li>Logic for Data Science(Python programming, SQL programming, Project Management with Jira)</li></p>
@@ -120,6 +151,8 @@
       </ul>
     </div>
   </div>
-  <p><h6>African Leadership University</h6> </p>
+  <p><h6><style media="screen">
+
+  </style> African Leadership University</h6> </p>
   </body>
 </html>
